--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "lodash": "^3.10.1",
     "q": "^1.4.1",
     "qunit": "^0.7.7"
+  },
+  "devDependencies": {
+    "qunitjs": "^1.20.0"
   }
 }
